# CNAPatternerOvito

./: README.md  pyproject.toml
example/: build_surf.py  fcc111.xyz  fcc211.xyz  fcc511.xyz  surface.xyz  sus.py
src/CNAPatterner/: __init__.py
src/CNAPatterner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
