[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.entry-points.'OVITO.Modifier']
"CNA Patterner" = "CNAPatterner:ComputeCNAPatterns"

[project]
name = "CNAPatterner"
version = "0.2.1"
description = "A Modifier for Ovito To compute CNAp."
keywords = ["ovito", "python-cna"]
authors = [{name = "Giacomo Becatt", email = "giacomo.becatti@unimi.it"}]
maintainers = [{name = "Giacomo Becatt", email = "giacomo.becatti@unimi.it"}]

license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
   "ovito >= 3.9.1",
    "numpy"
]

[project.urls]
repository = "https://github.com/nanoMLMS/CNAPatternerOvito/"

[tool.setuptools.packages.find]
where = ["src"]
